@@ -4,25 +4,26 @@
 {# Sometimes (if the author has no image), colums are rendered as default
    articles (instead of column.html). In this case, we need to adjust a few
    Things inside the article template (here). #}
-{% set is_column = view and view.context and view.context.serie and view.context.serie.column %}
 
 {% block main %}
     {% block advertorial_marker %}{% endblock advertorial_marker %}
     {% block content %}
-    <article class="article article--{{ view | block_type }}" id="js-article" itemtype="http://schema.org/Article" itemid="{{ view.basename }}" itemscope>
+    <article class="article article--{{ view | block_type }}" id="js-article" itemprop="mainEntity" itemscope itemtype="http://schema.org/Article" itemid="{{ view.basename }}" itemref="publisher">
+        <link itemprop="mainEntityOfPage" href="{{ view.canonical_url }}">
     {% profile %}
         {% block article_heading %}
             <div class="article__item">
                 {% set headertag = 'div' if view.pagination and view.pagination.current > 1 and view.current_page.teaser else 'h1' %}
                 <{{ headertag }} class="article-heading" itemprop="headline">
                     <span class="article-heading__kicker">
-                        {% if is_column == True %}
-                            {{ view.serie + ' / ' }}
-                        {% endif %}
-                        {{ view.supertitle }}
-                    </span>{%- if view.title -%}<span class="article-heading__colon">: </span>{%- endif -%}
+                        {%- if view.context is column -%}
+                            {{- view.serie + ' / ' -}}
+                        {%- endif -%}
+                        {{- view.supertitle -}}
+                    </span>
+                    {%- if view.title -%}<span class="article-heading__colon">: </span>{%- endif -%}
                     <span class="article-heading__title">
-                        {{ view.title }}
+                        {{- view.title -}}
                     </span>
                 </{{ headertag }}>
             </div>
