@@ -1,4 +1,4 @@
-<time itemprop="datePublished" content="{{ view.date_last_modified | format_date('iso8601') }}" datetime="{{ view.date_last_modified | format_date('iso8601') }}" class="metadata__date
+<time itemprop="datePublished" datetime="{{ view.date_last_modified | format_date('iso8601') }}" class="metadata__date
 	{%- if view.obfuscated_date %} encoded-date" data-obfuscated="{{ view.obfuscated_date }}{% endif %}">
 	{{ view.date_last_modified | format_date(view.show_date_format) }}
 </time>
